# microfarm

./: README.txt  client.py  jwtservice.py  new_certificate.py  project.yaml  pyproject.toml  register.py  requirements.txt  runner.py  server.py  services.txt  store.py  topology.py  web.py
api/: new_account.py  new_certificate.py
emailer/: service.py
identities/: fernet.key  intermediate.cert  intermediate.key  jwt.key  jwt.pub  root.cert  root.key
microfarm/: __init__.py  authentication.py  certificate.py  listeners.py  middlewares.py  register.py  rpc.py  session.py  storage.py  validation.py
persistence/: models.py  requirements.txt  service.py
pki/: client.py  pki.py  pki.toml  requirements.txt  security.py  server.py  service.py  utils.py
src/microfarm.topography/: compile.sh  setup.cfg  setup.py
src/microfarm.topography/src/microfarm/topography/messages/: notification_pb2.py  persistence_pb2.py  requests_pb2.py
src/microfarm.topology/: compile.sh
src/microfarm.topology/src/microfarm/topology/: __init__.py  topology.yaml
