[metadata]
name = microfarm.topology
version = 0.1
url =
project_urls =
    Source Code = https://github.com/Treegital/microfarm.git
license = Proprietary
author = Souheil Chelfouh
author_email = sch@treegital.fr
maintainer = Treegital
maintainer_email = sch@treegital.fr
description = Topology for microservice based CertiFarm
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options]
namespace_packages = microfarm
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.10

[options.packages.find]
where = src
